# HarmonyOS_Samples

./: .gitignore  README.md  sync.yml
ComplexTypePass/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
CrossModuleReference/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
DocsSample_Graphics/NdkDrawingGuideSamples/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
DocsSample_MultiMedia/UsingImageProcessingToProcessImages/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
HMOS_LiveStream/entry/src/main/cpp/: CMakeLists.txt
HMOS_LiveStream/entry/src/main/cpp/common/: ApiCompatibility.h  SampleInfo.h
HMOS_LiveStream/entry/src/main/cpp/player/: Player.cpp  PlayerNative.cpp
HMOS_LiveStream/entry/src/main/cpp/recorder/: Recorder.cpp  RecorderNative.cpp
NativeDataConversion/conversion/src/main/cpp/: ArrayType.cpp  ArrayType.h  ArraybufferType.cpp  ArraybufferType.h  CMakeLists.txt  DateType.cpp  DateType.h  NumberType.cpp  NumberType.h  ObjectType.cpp  ObjectType.h  StringBoolType.cpp  StringBoolType.h  hello.cpp
VideoProcessing/entry/src/main/cpp/: CMakeLists.txt
VideoProcessing/entry/src/main/cpp/capbilities/: Demuxer.cpp
VideoProcessing/entry/src/main/cpp/render/: PluginManager.cpp  PluginRender.cpp
adaptive-buffer-resolution-samplecode-clientdemo-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
adaptive-buffer-resolution-samplecode-clientdemo-cpp/entry/src/main/cpp/include/: aabb.hpp  asset.hpp  camera.hpp  core.hpp  gui.hpp  log.hpp  math_common.hpp  matrix4x4.hpp  native_mesh.hpp  opaque_layer.hpp  opaque_layer_base.hpp  projection_clip_planes.hpp  renderer.hpp  resources_load.hpp  scene_abr.hpp  scene_base.hpp  sprite.hpp  stencil_ids.hpp  texture_loader.hpp  timer.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp  wanted_level.hpp
adaptive-buffer-resolution-samplecode-clientdemo-cpp/entry/src/main/cpp/sources/: aabb.cpp  asset.cpp  camera.cpp  core.cpp  gui.cpp  log.cpp  matrix4x4.cpp  opaque_layer.cpp  opaque_layer_base.cpp  projection_clip_planes.cpp  renderer.cpp  scene_abr.cpp  scene_base.cpp  sprite.cpp  texture_loader.cpp  timer.cpp  vector3d.cpp  vector4d.cpp  wanted_level.cpp
audio-codec/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
avcodec-buffer-mode/entry/src/main/cpp/: CMakeLists.txt
avcodec-buffer-mode/entry/src/main/cpp/capbilities/: Demuxer.cpp  Muxer.cpp  VideoDecoder.cpp  VideoEncoder.cpp
avcodec-buffer-mode/entry/src/main/cpp/common/: SampleCallback.cpp  SampleCallback.h  SampleInfo.h
faqsnippets/ImageKit/CPixelMapToMat/src/main/cpp/: CMakeLists.txt  napi_init.cpp
frame-generation-gles-samplecode-clientdemo-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
frame-generation-gles-samplecode-clientdemo-cpp/entry/src/main/cpp/include/: aabb.hpp  asset.hpp  camera.hpp  core.hpp  gui.hpp  log.hpp  math_common.hpp  matrix4x4.hpp  native_mesh.hpp  opaque_layer.hpp  opaque_layer_base.hpp  projection_clip_planes.hpp  renderer.hpp  resources_load.hpp  scene_base.hpp  scene_extrapolation.hpp  scene_interpolation.hpp  sprite.hpp  stencil_ids.hpp  texture_loader.hpp  timer.hpp  vector2d.hpp  vector3d.hpp  vector4d.hpp  wanted_level.hpp
frame-generation-gles-samplecode-clientdemo-cpp/entry/src/main/cpp/sources/: aabb.cpp  asset.cpp  camera.cpp  core.cpp  gui.cpp  log.cpp  matrix4x4.cpp  opaque_layer.cpp  opaque_layer_base.cpp  projection_clip_planes.cpp  renderer.cpp  scene_base.cpp  scene_extrapolation.cpp  scene_interpolation.cpp  sprite.cpp  texture_loader.cpp  timer.cpp  vector3d.cpp  vector4d.cpp  wanted_level.cpp
frame-generation-vulkan-samplecode-clientdemo-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
frame-generation-vulkan-samplecode-clientdemo-cpp/entry/src/main/cpp/Asset/: AAssetImporter.cpp  AAssetImporter.h
frame-generation-vulkan-samplecode-clientdemo-cpp/entry/src/main/cpp/Begin/: core.cpp  core.hpp  fif.h  hellovk.cpp  hellovk.h
frame-generation-vulkan-samplecode-clientdemo-cpp/entry/src/main/cpp/Common/: Singleton.hpp  log.cpp  log.hpp  timer.cpp  timer.hpp
frame-generation-vulkan-samplecode-clientdemo-cpp/entry/src/main/cpp/vulkan_utils/: Blit.cpp  Blit.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  Device.cpp  Device.h  Image.cpp  Image.h  MainSceneRenderer.cpp  MainSceneRenderer.h  UIRenderer.cpp  UIRenderer.h  Utils.cpp  Utils.h
function-flow-runtime-kit-sample-code-job-partner-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  parallel.cpp  serial.cpp  task.h
gameservice_samplecode_game_performance_clientdemo_cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
gameservice_samplecode_game_performance_clientdemo_cpp/entry/src/main/cpp/include/: game_performance_sample.h
gameservice_samplecode_game_performance_clientdemo_cpp/entry/src/main/cpp/src/: init.cpp  query_gpuinfo.cpp  query_thermalinfo.cpp  thermallevel_callback.cpp  update_gameinfo.cpp
hdr2sdr/entry/src/main/cpp/: CMakeLists.txt
hdr2sdr/entry/src/main/cpp/capbilities/: AudioCapturer.cpp  AudioDecoder.cpp  AudioEncoder.cpp  Demuxer.cpp  Muxer.cpp  VideoDecoder.cpp  VideoEncoder.cpp
hdr2sdr/entry/src/main/cpp/common/: SampleCallback.cpp  SampleInfo.h
hdr2sdr/entry/src/main/cpp/render/: ProcessingPluginManager.cpp  ProcessingPluginRender.cpp
hiaifoundationkit-samplecode-clientdemo-cpp/entry/src/main/cpp/: CMakeLists.txt  Classification.cpp  HIAIModelManager.cpp  HIAIModelManager.h
ndk-rawfile/entry/src/main/cpp/: CMakeLists.txt  global_handlers.cpp  preloadso.cpp  rawfile_demo.cpp
ndkcreate-ui/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
online-authenticationkit_sample_fido2clientdemo_cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
video-render/entry/src/main/cpp/: CMakeLists.txt  main.cpp
video-water-mark/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
video-water-mark/entry/src/main/cpp/camera/: ndk_camera.cpp  ndk_camera.h
xengine-samplecode-gles-demo-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
xengine-samplecode-subpass-shading-demo-cpp/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
(+9838 files in other folders)
