# the minimum version of CMake.
cmake_minimum_required(VERSION 3.4.1)
project(ComplexTypePass)

set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

if(DEFINED PACKAGE_FIND_FILE)
    include(${PACKAGE_FIND_FILE})
endif()

include_directories(${NATIVERENDER_ROOT_PATH}
                    ${NATIVERENDER_ROOT_PATH}/include
                    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/json/${OHOS_ARCH}/include)

add_definitions( "-DLOG_DOMAIN=0xd0d0" )

add_library(entry SHARED napi_init.cpp)

# [Start target_link_libraries]
# entry/src/main/cpp/CMakeLists.txt
target_link_libraries(entry PUBLIC libace_napi.z.so libhilog_ndk.z.so libpixelmap_ndk.z.so)
# [Start target_link_libraries]